			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04a: *********************************

IMP: (09/30/05, SMR) Modified some "Preferences" panels to have their own technology popup.

IMP: (09/30/05, SMR) When plotting simulation output, prompt for associated cell allows
     any cell to be chosen (Bug #595).

BUG: (09/30/05, RK) NCC regressions don't run on Windows (Bug #596).

BUG: (09/30/05, RK) NCC: Local Partitioning perfomance bug for large number of PortInsts (Bug #572).

BUG: (09/30/05, SMR) Black background doesn't draw text right (Bug #593).
FIX: Changed default black color to an appropriate one for the background.

IMP: (09/30/05, SMR) Schematic DRC no longer checks for overlap of graphics.

IMP: (09/30/05, SMR) "Layers" preferences panel has intelligent "outline" checkboxes.

BUG: (09/30/05, SMR) Crossprobing from the schematics to the waveform window takes too long (Bug #583).
FIX: Use hash tables to optimize name lookup.

IMP: (09/29/05, SMR) Added keyboard shortcut listing in manual.

IMP: (09/29/05, SMR) Added manual entry for schematic DRC.

IMP: (09/29/05, SMR) Added section in "Layout Tutorial" of manual that explains
     how to connect a contact to a transistor.

BUG: (09/30/05, GVG) Solid colors in ColorsTab are not updated because the information
relies on values found in LayersTab (Bug #589).
FIX: Make layerMap in LayersTab a singleton.

BUG: (09/30/05, DN) Cleanup Cell/Shorten Selected Arc, does opposite (Bug #587).
FIX: In CircuitChanges.ShortenArcs.doIt use ArcInst.HEADEND and ArcInst.TAILEND instead of 0 and 1.

BUG: (09/26/05, DN) Deleting arcs is too slow (Bug #547)
FIX: Comment check of Connections in Cell.check().

BUG: (09/29/05, DN) Schematic VDD Symbol misleading (Bug #586)
FIX: In technologies.Schematics change "pwr" to "vdd" and add item to "converOldPortName".
